added controllers and posts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=blog_backend
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database=postgresql
+spring.datasource.url = jdbc:postgresql://localhost:5432/blog_content
+spring.datasource.username=postgres
+spring.datasource.password=MARTIN9X!
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
